--- a/jenkins/test/Jenkinsfile
+++ b/jenkins/test/Jenkinsfile
@@ -82,7 +82,7 @@ pipeline {
 
                     script {
                         try {
-                            sh(". ${WORKSPACE}/.venv/bin/activate && ${WORKSPACE}/.venv/bin/python setup.py test -a '--junitxml=test.xml'")
+                            sh(". ${WORKSPACE}/.venv/bin/activate && pip install "pytest<5.0.0" && python setup.py test -a '--junitxml=test.xml'")
                         } catch(ex) {
                             junit("test.xml")
                             throw ex
